yaml/trd-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trd-prd-index
  namespace: trd-frontend
  labels:
    app: index-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: index-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: index-app
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - index-app
            topologyKey: "kubernetes.io/hostname"
      containers:
      - image: 412381775968.dkr.ecr.ap-northeast-2.amazonaws.com/trd-dockerhub:nginxindexv1.0
        name: trd-index
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 128Mi
            cpu: 100m
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 5

---

apiVersion: v1
kind: Service
metadata:
  name: trd-index-svc
  namespace: trd-frontend
spec:
  selector:
    app: index-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trd-prd-sign
  namespace: trd-frontend
  labels:
    app: sign-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sign-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: sign-app
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - sign-app
            topologyKey: "kubernetes.io/hostname"
      containers:
      - image: 412381775968.dkr.ecr.ap-northeast-2.amazonaws.com/trd-dockerhub:nginxsignv1.0
        name: trd-sign
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 128Mi
            cpu: 100m
        livenessProbe:
          httpGet:
            path: /
            port: 80
            initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 5
---

apiVersion: v1
kind: Service
metadata:
  name: trd-sign-svc
  namespace: trd-frontend
spec:
  selector:
    app: sign-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trd-prd-login
  namespace: trd-frontend
  labels:
    app: login-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: login-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: login-app
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - login-app
            topologyKey: "kubernetes.io/hostname"
      containers:
      - image: 412381775968.dkr.ecr.ap-northeast-2.amazonaws.com/trd-dockerhub:nginxloginv1.0
        name: trd-login
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 64Mi
            cpu: 75m
          limits:
            memory: 64Mi
            cpu: 75m
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 5

---

apiVersion: v1
kind: Service
metadata:
  name: trd-login-svc
  namespace: trd-frontend
spec:
  selector:
    app: login-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: trd-prd-doc
  namespace: trd-frontend
  labels:
    app: doc-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: doc-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: doc-app
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - doc-app
            topologyKey: "kubernetes.io/hostname"
      containers:
      - image: 412381775968.dkr.ecr.ap-northeast-2.amazonaws.com/trd-dockerhub:nginxdocv1.0
        name: trd-doc
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 128Mi
            cpu: 100m
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 5

---

apiVersion: v1
kind: Service
metadata:
  name: trd-doc-svc
  namespace: trd-frontend
spec:
  selector:
    app: doc-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: trd-prd-docrg
  namespace: trd-frontend
  labels:
    app: docrg-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: docrg-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: docrg-app
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - docrg-app
            topologyKey: "kubernetes.io/hostname"
      containers:
      - image: 412381775968.dkr.ecr.ap-northeast-2.amazonaws.com/trd-dockerhub:nginxdocrgv1.0
        name: trd-docrg
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 128Mi
            cpu: 100m
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 5

---

apiVersion: v1
kind: Service
metadata:
  name: trd-docrg-svc
  namespace: trd-frontend
spec:
  selector:
    app: docrg-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
