yaml/trd-tomcat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trd-tomindex-svc
  namespace: trd-backend
spec:
  selector:
    app: index-app
  type: ClusterIP
  clusterIP: 172.20.10.20
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: trd-tomsign-svc
  namespace: trd-backend
spec:
  selector:
    app: sign-app
  type: ClusterIP
  clusterIP: 172.20.10.40
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: trdr-tomlogin-svc
  namespace: trd-backend
spec:
  selector:
    app: login-app
  type: ClusterIP
  clusterIP: 172.20.10.60
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: trd-tombook-svc
  namespace: trd-backend
spec:
  selector:
    app: login-app
  type: ClusterIP
  clusterIP: 172.20.10.80
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
